# barcarena-sustentavel-api

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.sh
.github/workflows/: ci-cd.yaml
app/: dependencies.py  main.py
app/api/: router.py
app/api/kml/: 150130305000001P.kml  3G_TIM_pa_intersect_clean.kml  3G_VIVO_pa_intersect_clean.kml
app/core/: config.py  database.py
app/domain/models/: admin.py  anexo.py  contribuicao.py  dimensao.py  email.py  estudoComplementar.py  indicador.py  indicadorReferencia.py  kml.py  models.py  posicao.py  referencias.py  user.py
app/domain/schemas/: anexo_schema.py  contribuicao_schema.py  dimesao_schema.py  estudo_complementar_schema.py  (+3 more)
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
migrations/: env.py
migrations/versions/: 007009e24d03_coluna_path_inserida_em_contribuicao.py  0409d05e077a_create_dimensao_and_related_tables.py  0a1ae7c1337b_indicador_fonte_metodologia.py  171ac2610709_titulo_grafico_adicionado.py  2e002bc94de8_adicionado_novo_campo_em_contribuicao.py  3215be6f79c6_criar_entidade_email.py  42ebb1343a55_unica_relação_de_chave_estrangeira_que_.py  5bae7dace858_renomear_name_nome_estudocomplementar.py  5bc263c39d32_relação_n_n_entre_as_entidades_.py  62ec90ecd484_adicionar_atributo_pagina_à_entidade_.py  92f34c7eb2de_anexo_e_anexoschema_modificados_.py  9f75a98a50f0_criar_posicao.py  a0f3e48c4aca_remove_indicador_foreign_key_from_.py  a73ce81a1629_merge_ae1_and_27c.py  b180697184de_create_model_estudocomplementar.py  bb1f56f43b6d_create_users_table.py  c3c57b317d4f_dimensao_posicao.py  cf35602c1698_estudo_complementar_nullable_false.py
myvenv/: pyvenv.cfg  requirements.txt
(+35 files in other folders)
