[tool.poetry]
name = "barcarena-sustentavel-api"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.34.0"
minio = "^7.2.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.6"
exceptiongroup = "^1.2.2"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
pyjwt = "^2.10.0"
passlib = "^1.7.4"
pydantic-settings = "^2.10.1"
python-decouple = "3.8"
bcrypt = "^4.3.0"


[tool.poetry.dev-dependencies]
uvicorn = "^0.34.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
